fix(mobile): incorrect padding between the bullet marker and the content boundary on mobile

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -201,12 +201,10 @@
 }
 
 .block-control-wrap {
-  height: 24px;
-  min-width: 44px;
-  margin-top: 0;
+  @apply h-[24px] mt-0 pr-[6px];
 
   &.is-order-list {
-    @apply relative right-[3px] mr-0;
+    @apply relative right-[3px] mr-0 pr-0;
   }
 }
 
